add writeup and additional assets

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
  github: [metadata]
- title: butt first coffee
+ title: Katherine Maack
  encoding: UTF-8
 #description: Hi, my name's Katherine. I'm a software developer located in Portland, Oregon.
  kramdown:
